trunk/Archive2/59/6aa6e602a3f9bb/output
main.cpp: In function 'int main()':
main.cpp:23:8: error: request for member 'operator[]' is ambiguous
     d[0];
        ^
main.cpp:14:10: note: candidates are: void Base2::operator[](std::size_t)
     void operator [] (std::size_t idx) { }
          ^
main.cpp:7:10: note:                 void Base1::operator[](const string&)
     void operator [] (const std::string& s) { }
          ^
