trunk/Archive2/59/6aa6e602a3f9bb/main.cpp
#include <string>

class Base1
{
    public:

    void operator [] (const std::string& s) { }
};

class Base2
{
    public:

    void operator [] (std::size_t idx) { }
};

class Derived : public Base1, public Base2
{ };

int main()
{
    Derived d;
    d[0];
}